--- a/src/styles/listagem.scss
+++ b/src/styles/listagem.scss
@@ -6,5 +6,7 @@
     #cards-list{
         display: flex;
         flex-wrap: wrap;
+        gap: 10px;
+        justify-content: space-between;
     }
 }
