--- a/src/styles/listagem.scss
+++ b/src/styles/listagem.scss
@@ -1,12 +1,48 @@
+$main-color: #DEA000;
 #content{
     width: 80%;
     margin: 0 auto;
 
+   
+    form{
+        padding: 32px;
+        width: 100%;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+            
+        input{
+             width: 50%;
+             padding: 8px;
+             border-radius: 10px;
+             border: 1px solid gray;
+             
+        }
+
+        button{
+            width: 15%;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            color: white;
+            background: $main-color;
+            transition: all linear 0.5s;
+
+            &:hover{
+                filter: brightness(0.9);
+                cursor: pointer;
+            }
+        }
+    }
+    
 
     #cards-list{
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 16px;
         justify-content: space-between;
+        @media(max-width:768px){
+            justify-content: center;
+        }
     }
 }
