--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,9 +1,34 @@
 nav{
     padding: 16px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+    background: #f8f8ff;
+
+    h2{
+        font-family: 'Montserrat', sans-serif;
+        font-size: 20px;
+    }
+
     >div{
         display: flex;
         gap: 10px;
+        align-items: center;
+
+        >img{
+            height: 40px;
+        }
+
+        a{
+            text-decoration: none;
+            font-size: 18px;
+            transition: all 0.5;
+            color: black;
+
+            &:hover{
+                filter:brightness(0.9);
+                color: #DEA000;
+            }
+        }
     }
 }
