--- a/src/styles/listagem.scss
+++ b/src/styles/listagem.scss
@@ -1,8 +1,10 @@
-$main-color: #DEA000;
+#principal{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+}
 #content{
     width: 80%;
     margin: 0 auto;
-
    
     form{
         padding: 32px;
@@ -13,19 +15,25 @@ $main-color: #DEA000;
             
         input{
              width: 50%;
-             padding: 8px;
+             padding: 12px;
              border-radius: 10px;
              border: 1px solid gray;
-             
+             font-size:16px;
+             @media(max-width:768px){
+                width: 60%;
+            }  
         }
 
         button{
             width: 15%;
+            @media(max-width:768px){
+                width: 40%;
+            }
             border: none;
             border-radius: 10px;
             padding: 10px;
             color: white;
-            background: $main-color;
+            background: #0D408E;
             transition: all linear 0.5s;
 
             &:hover{
@@ -37,9 +45,13 @@ $main-color: #DEA000;
     
 
     #cards-list{
+        background: #f8f8ff;
+        border: 1px solid gray;
+        border-radius: 5px;
         display: flex;
         flex-wrap: wrap;
-        gap: 16px;
+        gap: 32px;
+        padding: 16px;
         justify-content: space-between;
         @media(max-width:768px){
             justify-content: center;
