--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -3,10 +3,12 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: #f8f8ff;
+    background: white;
+    border-bottom: 1px solid #dfdfe4;
 
     h2{
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
         font-size: 20px;
     }
 
@@ -15,9 +17,6 @@ nav{
         gap: 10px;
         align-items: center;
 
-        >img{
-            height: 40px;
-        }
 
         a{
             text-decoration: none;
@@ -27,7 +26,7 @@ nav{
 
             &:hover{
                 filter:brightness(0.9);
-                color: #DEA000;
+                color: #0D408E;
             }
         }
     }
